--- a/GetElByID/Getelbyid-exercise.css
+++ b/GetElByID/Getelbyid-exercise.css
@@ -1,18 +1,32 @@
 body {
     background-color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 5vh 2vw;
 }
 
 .slideshow{
-    width: 100%;
+    height: 50vw;
     z-index: -1;
+    
+}
+
+.slide{
+    height: 60%;
+    display: flex;
+}
+
+.slide img{
+    height: 100%;
+    margin: auto;
 }
 
 .arrows{
     display: flex;
-    align-content: space-between;  
+    margin: auto; 
 }
 
 .avanti img, .indietro img{
     height: 5vh;
+    
 
 }
