--- a/GetElByID/Getelbyid-exercise.css
+++ b/GetElByID/Getelbyid-exercise.css
@@ -1,6 +1,6 @@
 body {
     background-color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Helvetica, Sans-Serif;
     margin: 5vh 2vw;
 }
 
