--- a/my_final_project_agostino/style.css
+++ b/my_final_project_agostino/style.css
@@ -16,46 +16,45 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: red;
+    border: 3px solid red;
     border-radius: 3px;
     width: 9vw;
     height: 9vw;
     margin: 5px;
+    position: relative;
 }
 
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 
+.front {
+    position: absolute;
+    z-index: -1;
+}
 
-/* responsive grid*/
+/* responsive grid */
 
 @media screen and (max-width: 600px) {
-    #container{
+    #container {
         grid-template-columns: repeat(5, 1fr);
     }
 
-    .card{
+    .card {
         width: 10vh;
         height: 10vh;
     }
-  }
+}
 
-@media screen and (max-width: 600px) {
-    #container{
-        grid-template-columns: repeat(5, 1fr);
-    }
-
-    .card{
-        width: 7vh;
-        height: 7vh;
-    }
-  }
-
-  @media screen and (max-width: 450px) {
-    #container{
+@media screen and (max-width: 450px) {
+    #container {
         grid-template-columns: repeat(4, 1fr);
     }
 
-    .card{
+    .card {
         width: 7vh;
         height: 7vh;
     }
-  }
+}
